--- a/src/scss/pages/_track.scss
+++ b/src/scss/pages/_track.scss
@@ -245,7 +245,7 @@
   }
 
   @include media.bigMobile {
-    .wrapper .card-body .buttons .disabled-btn {
+    .wrapper .card-body .buttons .cancel-btn {
       margin-bottom: 1em;
       width: 100%;
     }
